--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,20 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "hyendaterminator"
+name = "hyendnaterminator"
 version = "0.0.1"
+description = "A package for terminator sequence analysis using Hyena-DNA."
+authors = [{name = "Zane Bates", email = "zanetbates@outlook.com"}]
+license = "MIT"
+requires-python = ">=3.8"
+dependencies = [
+    "transformers==4.33.2",
+]
 
 [tool.pytest.ini_options]
 addopts = [
     "--import-mode=importlib",
 ]
+
+[tool.hatch.build.targets]
+wheel = {include = ["utils/"], exclude = ["*.txt", "*.md"]}
